--- a/src/nextra.css
+++ b/src/nextra.css
@@ -129,7 +129,7 @@
 
   /* Property specific variables */
   --speakeasy-property-type-background-color: var(--x-color-black);
-  --speakeasy-property-type-color: color: var(--x-color-slate-200);
+  --speakeasy-property-type-color: var(--x-color-slate-200);
   --speakeasy-property-type-border-color: color-mix(in oklab, var(--x-color-black) 80%, transparent);
 
    /* TryItNow specific variables */
