--- a/src/nextra.css
+++ b/src/nextra.css
@@ -35,24 +35,96 @@
   --speakeasy-pill-padding: 2px 6px;
   --speakeasy-pill-font-family: var(--x-font-mono);
   --speakeasy-pill-font-size: 80%;
-  --speakeasy-pill-warning-background-color: color-mix(in oklab, var(--x-color-orange-400) 5%, transparent);
-  --speakeasy-pill-warning-color: color-mix(in oklab, var(--x-color-orange-400) 80%, transparent);
-  --speakeasy-pill-warning-border-color: color-mix(in oklab, var(--speakeasy-pill-warning-color) 30%, transparent);
-  --speakeasy-pill-error-background-color: color-mix(in oklab, var(--x-color-red-500) 5%, transparent);
-  --speakeasy-pill-error-color: color-mix(in oklab, var(--x-color-red-500) 80%, transparent);
-  --speakeasy-pill-error-border-color: color-mix(in oklab, var(--speakeasy-pill-error-color) 30%, transparent);
-  --speakeasy-pill-info-background-color: color-mix(in oklab, var(--x-color-slate-700) 5%, transparent);
-  --speakeasy-pill-info-color: color-mix(in oklab, var(--x-color-slate-700) 80%, transparent);
-  --speakeasy-pill-info-border-color: color-mix(in oklab, var(--speakeasy-pill-info-color) 30%, transparent);
-  --speakeasy-pill-primary-background-color: color-mix(in oklab, var(--x-color-primary-800) 5%, transparent);
-  --speakeasy-pill-primary-color: color-mix(in oklab, var(--x-color-primary-800) 80%, transparent);
-  --speakeasy-pill-primary-border-color: color-mix(in oklab, var(--speakeasy-pill-primary-color) 30%, transparent);
-  --speakeasy-pill-secondary-background-color: color-mix(in oklab, var(--x-color-primary-800) 5%, transparent);
-  --speakeasy-pill-secondary-color: color-mix(in oklab, var(--x-color-primary-800) 80%, transparent);
-  --speakeasy-pill-secondary-border-color: color-mix(in oklab, var(--speakeasy-pill-secondary-color) 30%, transparent);
-  --speakeasy-pill-success-background-color: color-mix(in oklab, var(--x-color-primary-800) 5%, transparent);
-  --speakeasy-pill-success-color: color-mix(in oklab, var(--x-color-primary-800) 80%, transparent);
-  --speakeasy-pill-success-border-color: color-mix(in oklab, var(--speakeasy-pill-success-color) 30%, transparent);
+  --speakeasy-pill-warning-background-color: color-mix(
+    in oklab,
+    var(--x-color-orange-400) 5%,
+    transparent
+  );
+  --speakeasy-pill-warning-color: color-mix(
+    in oklab,
+    var(--x-color-orange-400) 80%,
+    transparent
+  );
+  --speakeasy-pill-warning-border-color: color-mix(
+    in oklab,
+    var(--speakeasy-pill-warning-color) 30%,
+    transparent
+  );
+  --speakeasy-pill-error-background-color: color-mix(
+    in oklab,
+    var(--x-color-red-500) 5%,
+    transparent
+  );
+  --speakeasy-pill-error-color: color-mix(
+    in oklab,
+    var(--x-color-red-500) 80%,
+    transparent
+  );
+  --speakeasy-pill-error-border-color: color-mix(
+    in oklab,
+    var(--speakeasy-pill-error-color) 30%,
+    transparent
+  );
+  --speakeasy-pill-info-background-color: color-mix(
+    in oklab,
+    var(--x-color-slate-700) 5%,
+    transparent
+  );
+  --speakeasy-pill-info-color: color-mix(
+    in oklab,
+    var(--x-color-slate-700) 80%,
+    transparent
+  );
+  --speakeasy-pill-info-border-color: color-mix(
+    in oklab,
+    var(--speakeasy-pill-info-color) 30%,
+    transparent
+  );
+  --speakeasy-pill-primary-background-color: color-mix(
+    in oklab,
+    var(--x-color-primary-800) 5%,
+    transparent
+  );
+  --speakeasy-pill-primary-color: color-mix(
+    in oklab,
+    var(--x-color-primary-800) 80%,
+    transparent
+  );
+  --speakeasy-pill-primary-border-color: color-mix(
+    in oklab,
+    var(--speakeasy-pill-primary-color) 30%,
+    transparent
+  );
+  --speakeasy-pill-secondary-background-color: color-mix(
+    in oklab,
+    var(--x-color-primary-800) 5%,
+    transparent
+  );
+  --speakeasy-pill-secondary-color: color-mix(
+    in oklab,
+    var(--x-color-primary-800) 80%,
+    transparent
+  );
+  --speakeasy-pill-secondary-border-color: color-mix(
+    in oklab,
+    var(--speakeasy-pill-secondary-color) 30%,
+    transparent
+  );
+  --speakeasy-pill-success-background-color: color-mix(
+    in oklab,
+    var(--x-color-primary-800) 5%,
+    transparent
+  );
+  --speakeasy-pill-success-color: color-mix(
+    in oklab,
+    var(--x-color-primary-800) 80%,
+    transparent
+  );
+  --speakeasy-pill-success-border-color: color-mix(
+    in oklab,
+    var(--speakeasy-pill-success-color) 30%,
+    transparent
+  );
 
   /* Tab specific variables */
   --speakeasy-tab-button-border-radius: var(--speakeasy-border-radius-lg);
@@ -76,7 +148,11 @@
   --speakeasy-property-type-color: var(--x-color-primary-600);
   --speakeasy-property-type-background-color: var(--x-color-white);
   --speakeasy-property-type-border-radius: var(--speakeasy-border-radius-md);
-  --speakeasy-property-type-border-color: color-mix(in oklab, var(--x-color-white) 80%, transparent);
+  --speakeasy-property-type-border-color: color-mix(
+    in oklab,
+    var(--x-color-white) 80%,
+    transparent
+  );
 
   /* Embed specific variables */
   --speakeasy-embed-heading-font-size: var(--x-text-2xl);
@@ -89,9 +165,21 @@
   --speakeasy-try-it-now-run-button-color: var(--x-color-content);
   --speakeasy-try-it-now-run-button-background-color: var(--x-color-nextra-bg);
   --speakeasy-try-it-now-results-text-color: var(--x-color-primary-100);
-  --speakeasy-try-it-now-results-info-background-color: color-mix(in oklab, var(--x-color-blue-700) 40%, transparent);
-  --speakeasy-try-it-now-results-error-background-color: color-mix(in oklab, var(--x-color-red-700) 40%, transparent);
-  --speakeasy-try-it-now-results-warn-background-color: color-mix(in oklab, var(--x-color-yellow-700) 40%, transparent);
+  --speakeasy-try-it-now-results-info-background-color: color-mix(
+    in oklab,
+    var(--x-color-blue-700) 40%,
+    transparent
+  );
+  --speakeasy-try-it-now-results-error-background-color: color-mix(
+    in oklab,
+    var(--x-color-red-700) 40%,
+    transparent
+  );
+  --speakeasy-try-it-now-results-warn-background-color: color-mix(
+    in oklab,
+    var(--x-color-yellow-700) 40%,
+    transparent
+  );
   --speakeasy-try-it-now-results-log-border-color: #cecece5a;
 }
 
@@ -110,9 +198,21 @@
   --speakeasy-code-background-color: var(--x-color-black);
 
   /* Pill specific variables */
-  --speakeasy-pill-info-background-color: color-mix(in oklab, var(--x-color-slate-200) 5%, transparent);
-  --speakeasy-pill-info-color: color-mix(in oklab, var(--x-color-slate-200) 80%, transparent);
-  --speakeasy-pill-info-border-color: color-mix(in oklab, var(--speakeasy-pill-info-color) 80%, transparent);
+  --speakeasy-pill-info-background-color: color-mix(
+    in oklab,
+    var(--x-color-slate-200) 5%,
+    transparent
+  );
+  --speakeasy-pill-info-color: color-mix(
+    in oklab,
+    var(--x-color-slate-200) 80%,
+    transparent
+  );
+  --speakeasy-pill-info-border-color: color-mix(
+    in oklab,
+    var(--speakeasy-pill-info-color) 80%,
+    transparent
+  );
 
   /* Expandable specific variables */
   --speakeasy-expandable-line-color: var(--x-color-neutral-600);
@@ -120,19 +220,39 @@
   /* Tab specific variables */
   --speakeasy-tab-button-color-inactive: var(--x-color-gray-500);
   --speakeasy-tab-button-color-inactive-hover: var(--x-color-gray-50);
-  --speakeasy-tab-button-background-inactive-hover: color-mix(in oklab, var(--x-color-primary-100) 5%, transparent);
+  --speakeasy-tab-button-background-inactive-hover: color-mix(
+    in oklab,
+    var(--x-color-primary-100) 5%,
+    transparent
+  );
 
   --speakeasy-tab-button-color-active: var(--x-color-primary-600);
-  --speakeasy-tab-button-color-active-hover: var(--speakeasy-tab-button-color-active);
-  --speakeasy-tab-button-background-active: color-mix(in oklab, var(--x-color-primary-400) 10%, transparent);
-  --speakeasy-tab-button-background-active-hover: var(--speakeasy-tab-button-background-active);
+  --speakeasy-tab-button-color-active-hover: var(
+    --speakeasy-tab-button-color-active
+  );
+  --speakeasy-tab-button-background-active: color-mix(
+    in oklab,
+    var(--x-color-primary-400) 10%,
+    transparent
+  );
+  --speakeasy-tab-button-background-active-hover: var(
+    --speakeasy-tab-button-background-active
+  );
 
   /* Property specific variables */
   --speakeasy-property-type-background-color: var(--x-color-black);
   --speakeasy-property-type-color: var(--x-color-slate-200);
-  --speakeasy-property-type-border-color: color-mix(in oklab, var(--x-color-black) 80%, transparent);
+  --speakeasy-property-type-border-color: color-mix(
+    in oklab,
+    var(--x-color-black) 80%,
+    transparent
+  );
 
-   /* TryItNow specific variables */
-   --speakeasy-try-it-now-run-button-color: var(--x-color-content);
-   --speakeasy-try-it-now-run-button-background-color: var(--x-color-nextra-bg);
+  /* TryItNow specific variables */
+  --speakeasy-try-it-now-run-button-color: var(--x-color-content);
+  --speakeasy-try-it-now-run-button-background-color: var(--x-color-nextra-bg);
+
+  /* Dialog specific variables */
+  --speakeasy-dialog-max-width: 660px;
+  --speakeasy-dialog-height: 480px;
 }
